--- a/source/_posts/think20170522.md
+++ b/source/_posts/think20170522.md
@@ -1,7 +1,7 @@
 ---
-title: 友言罢工了，来必力接力上线
+title: 友言罢工了，畅言接力上线
 date: 2017-05-22 22:41:18
-tags: 友言 来必力 评论系统
+tags: 友言 畅言 评论系统
 ---
 
 之前一直用的友言做第三方评论系统，不知道怎么回事就罢工了
@@ -9,11 +9,11 @@ tags: 友言 来必力 评论系统
 算了算了，谁让我用别人免费的呢
 你不让我用，那我就只能换一家了
 
-<!--more-->
-
 现在网站访问友言的JS直接就报网关错误了。。。不知道其他用户有没有这个现象 --！
 
 ![yoiyan](http://7xjijm.com1.z0.glb.clouddn.com/youyan1.jpg)
+
+<!--more-->
 
 我给他们客服留了言，一直没回应，然后本想加他们客服QQ群去了解下情况
 谁知道一搜官方的QQ号，居然是一个蜂蜜买卖群
@@ -25,11 +25,13 @@ tags: 友言 来必力 评论系统
 ![biaoqing](http://7xjijm.com1.z0.glb.clouddn.com/wulianku.jpg)
 
 
-所以，暂时我也只能换个方案了。。。也就是现在用的方案————来自韩国的 来必力`Livere`
-好吧，我承认有点丑，速度也慢，但是好歹能用啊！
-后面我也会继续跟友言官方联系一下，尽量还是换回来
-毕竟颜值也高啊！哈哈哈
-好的。。就先这样，goog bye
+所以，暂时我也只能换个方案了。。。也就是现在用的方案————来自sohu的 畅言
+怎么说呢，讲个就把，自定义功能也还好
+~~后面我也会继续跟友言官方联系一下，尽量还是换回来~~
+~~毕竟颜值也高啊！哈哈哈~~
+已经各种联系过友言官方了
+原来好久之前已经没人专门维护了
+那。。就这样吧，goog bye
 
 
 后记：两三周没更新了，内心满满的负罪感，不努力会很轻松。。。No No No
